src/test/compile-fail/liveness-while-cond.rs
fn main() {
    let x: bool;
    while x { } //! ERROR use of variable that may not have been initialized
}
